<resources>
    <string name="app_name">NutaposTechTest</string>

    <string name="insert">Tambah</string>
    <string name="close">Tutup</string>
    <string name="edit">Edit</string>
    <string name="save">Simpan</string>
    <string name="back">Kembali</string>
    <string name="delete">Hapus</string>

    <string name="test_1">Test 1</string>
    <string name="test_2_input">Test 2 Input</string>
    <string name="test_2_list">Test 2 List</string>

    <string name="record">Transaksi</string>
    <string name="record_list">Daftar Transaksi</string>
    <string name="record_list_empty">Daftar Transaksi kosong</string>
    <string name="record_uang_masuk">Uang Masuk</string>
    <string name="record_uang_masuk_id">ID</string>
    <string name="record_uang_masuk_terima_dari">Terima Dari</string>
    <string name="record_uang_masuk_keterangan">Keterangan</string>
    <string name="record_uang_masuk_jumlah">Jumlah</string>
    <string name="record_uang_masuk_nomor">Nomor</string>
    <string name="record_uang_masuk_net_sales">Net Sales (10%)</string>
    <string name="record_uang_masuk_diskon">Diskon (10% + 10%)</string>
    <string name="record_uang_masuk_setelah_diskon">Total setelah diskon</string>
    <string name="record_uang_masuk_net_resto">Net untuk resto</string>
    <string name="record_uang_masuk_share_ojol">Share untuk ojol</string>

    <string name="record_insert">Tambah Transaksi</string>
    <string name="record_insert_success">Berhasil menambah Transaksi</string>
    <string name="record_insert_failed">Gagal menambah Transaksi</string>

    <string name="insert_masuk_ke">Masuk Ke</string>
    <string name="insert_dari">Dari</string>
    <string name="insert_dari_hint">Pemilik bisnis</string>
    <string name="insert_keterangan_hint">Tambahan modal</string>
    <string name="insert_jenis">Jenis</string>

    <string name="list_cetak_ulang_struk">Cetak Ulang Struk</string>
</resources>