<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvUangMasuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_uang_masuk"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvUangMasuk">

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_id"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvId"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="TRX123" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_terima_dari"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvTerimaDari"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Agus Susanto" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_keterangan"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvKeterangan"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Tunai" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_jumlah"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvJumlah"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Rp 150.000" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_nomor"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvNomor"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Rp 150.000" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_net_sales"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvNetSales"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Rp 150.000" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_diskon"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvDiskon"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Rp 150.000" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_setelah_diskon"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvSetelahDiskon"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Rp 150.000" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_net_resto"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvNetResto"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Rp 150.000" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/record_uang_masuk_share_ojol"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvShareOjol"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp"
                    tools:text="Rp 150.000" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>