<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.test2.insert.InsertUangActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="48dp"
        android:paddingVertical="36dp">

        <TextView
            android:id="@+id/labelMasukKe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_masuk_ke"
            app:layout_constraintBottom_toBottomOf="@+id/tilMasukKe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilMasukKe" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMasukKe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMasukKe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:enabled="false"
            android:text="@string/edit"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tilMasukKe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilMasukKe" />

        <TextView
            android:id="@+id/labelDari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_dari"
            app:layout_constraintBottom_toBottomOf="@+id/tilDari"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilDari" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDari"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/tilMasukKe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_dari_hint"
                android:imeOptions="actionDone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelJumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_uang_masuk_jumlah"
            app:layout_constraintBottom_toBottomOf="@+id/tilJumlah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilJumlah" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilJumlah"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/tilDari"
            app:startIconDrawable="@drawable/ic_prefix_rupiah">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etJumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelKeterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_uang_masuk_keterangan"
            app:layout_constraintBottom_toBottomOf="@+id/tilKeterangan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilKeterangan" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilKeterangan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/tilJumlah">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etKeterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_keterangan_hint"
                android:imeOptions="actionDone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelJenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_jenis"
            app:layout_constraintBottom_toBottomOf="@+id/tilJenis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilJenis" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilJenis"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/tilKeterangan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etJenis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:focusable="false"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="labelMasukKe, labelDari, labelJumlah, labelKeterangan, labelJenis" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:minWidth="150dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilJenis" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>